feature(unit tests): working and refactored user, account, transaction unit tests. converted DTOs to records